--- a/projects/kypo-training-agenda/run-detail/src/components/level/info-level/info-level.component.css
+++ b/projects/kypo-training-agenda/run-detail/src/components/level/info-level/info-level.component.css
@@ -19,6 +19,7 @@
 
 markdown {
   width: 100%;
+  background-color: transparent;
 }
 
 markdown ::ng-deep img {
